# src/utils/swagger.json
@@ -123,6 +123,33 @@
 			"ContactUsDTO": {
 				"$ref": "#/components/schemas/ReturnType_typeofcontactUsSchema.parse_"
 			},
+			"ReturnType_typeofstatusCreateSchema.parse_": {
+				"properties": {
+					"boardId": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"StatusCreateDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofstatusCreateSchema.parse_"
+			},
+			"ReturnType_typeofstatusEditSchema.parse_": {
+				"properties": {
+					"name": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"StatusEditDTO": {
+				"$ref": "#/components/schemas/ReturnType_typeofstatusEditSchema.parse_"
+			},
 			"UserUpdateDTOType": {
 				"properties": {
 					"availableHoursTo": {
@@ -784,6 +811,140 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/status": {
+			"post": {
+				"operationId": "AddStatus",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Create a status",
+				"tags": [
+					"Status"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/StatusCreateDTO"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "ReadStatus",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Retrieves list of status belonging to a board",
+				"tags": [
+					"Status"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/status/{statusId}": {
+			"patch": {
+				"operationId": "UpdateStatus",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Edit a domain belonging to a user",
+				"tags": [
+					"Status"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "statusId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/StatusEditDTO"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "RemoveDomain",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Delete a domain belonging to a user",
+				"tags": [
+					"Status"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "statusId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/user/profile": {
